# bare-metal-app

./: .gitignore  Makefile  README.md
my_startup/: K66F_linker_script.ld  startup_K66F.c
nxp_startup/: CMakeLists.txt  armgcc.cmake  cmake_install.cmake
src/: blinky.c  system_MK66F18.c
